# Oeconomia-Climate-finance

./: .env.example  .gitattributes  .gitignore  .venv  AGENTS.md  CLAUDE.md  Makefile  Makefile.analysis-manuscript  Makefile.datapaper  Makefile.manuscript  Makefile.repro  PLAN.md  README-analysis.md  README-datapaper.md  README.md  ROADMAP.md  STATE.md  _quarto.yml  companion-paper.html  companion-paper.qmd  companion.mk  corpus-paragraph.md  data-paper.html  divergence.mk  dvc.yaml  manuscript.html  manuscript.md  manuscript.qmd  method.md  multilayer-detection.mk  notes.md  pyproject.toml  technical-report-breakpoints.md  technical-report.html  technical-report.md  technical-report.qmd  typescript  venues.mk  verify_corpus.py  zoo.mk
.claude/: settings.json
.dvc/: config
AI tech reports/: Climate_Finance_Annotated_Bibliography.md
_includes/: alluvial-diagram.md  corpus-refinement.md  structural-breaks.md
attic/: catalog_openalex_historical.py
bibliography/: main.bib  oeconomia.csl
config/: ai-tells.yml  analysis.yaml  corpus_collect.yaml  corpus_filter.yaml  corpus_refine.yaml  openalex_queries.yaml  v1_cluster_centroids.npy  v1_cluster_labels.json  v1_tab_alluvial.csv
content/: agentic-paper.qmd  companion-paper-vars.yml  companion-paper.qmd  corpus-report.qmd  data-paper.qmd  manuscript-Gide.qmd  manuscript.qmd  multilayer-detection-techrep.qmd  multilayer-detection.qmd  ncc-analysis.qmd  slides-eshet.qmd  slides-gide.qmd  technical-report.qmd  zoo-breakpoint-detection-methods.qmd  zoo-only.qmd
data/: .gitignore  README.md  TECHNICAL-NOTE.md  data  exports.dvc  grey_sources.yaml  openalex_queries.yaml  pool.dvc  syllabi.dvc  teaching_sources.yaml
docs/: CR séminaire Bourguignon 2025-12-02.md  ChatGPT-20260415-MethodForAutoPeriodization-v0.md  ChatGPT-20260415-MethodForAutoPeriodization-v1.md  Code de déontologie et bonnes pratiques.md  Informations aux auteurs.md  Présentation revue.md  audit-multi-output-scripts.md  bias-audit-companion-paper.md  braindump-2026-03-18.md  braindump-2026-03-23-clustering.md  braindump-2026-03-28.md  braindump-harness-extraction.md  coding-guidelines.md  companion-paper-assessment.md  data-management-plan.md  data-paper-submission-gaps.md  editorial-brief.md  eshet-hes-slides-outline.md  eshet-hes-slides-plan.md  handoff-padme-divergence.md  issue-237-comment-landscape.md  journal-survey-companion-paper.md  journal-survey-data-paper.md  journal-survey-methods-paper.md  literature-review-structural-break-detection.md  memory-policy.md  ncc-article6-assessment.md  ncc-figure-captions.md  ncc-format-specs.md  ncc-literature-review.md  ncc-pipeline-audit.md  oeconomia-style.md  overnight-log-2026-03-20.md  overnight-log-2026-03-22.md  overnight-log-2026-03-23.md  peer-review-round2-2026-03-10.md  phase1-issue-51-summary.md  phase1-pipeline-issue-handoff.md  plan-makefile-modularization.md  projet livre - pitch.md  (+16 more)
figures/: fig2_alluvial.html  fig3_alluvial.html  fig3_genealogy.html  fig4_genealogy.html  interactive_core_corpus.html
hooks/: post-checkout  pre-commit  pre-push
issues/: normalize-flags-column.md
mk/: archives.mk  figures.mk  render.mk
release/: checklist.md  cover-letter-rdj.txt  hal-id.txt  rdj-submission-checklist.md  release-journal.md  revision-runbook.md  zenodo-doi.txt
reviews/: 2026-03-15-open-branches.md
runbooks/: autonomous-session.md  celebrate-day.md  celebrate.md  housekeeping.md  memory.md  new-ticket.md  on-start.md  overnight-exploration.md  pre-commit.md  review-pr-prose.md  review-pr.md  smell-diagnostics.md  start-ticket.md  submission-branch.md  submission-readiness.md
scripts/: _citation_methods.py  _companion_plot_utils.py  _convergence_data.py  _divergence_backend.py  _divergence_c2st.py  _divergence_citation.py  _divergence_community.py  _divergence_io.py  _divergence_lexical.py  _divergence_semantic.py  _permutation_accel.py  _permutation_c2st.py  _permutation_citation.py  _permutation_graph.py  _permutation_io.py  _permutation_lexical.py  _permutation_semantic.py  analyze_100bn.py  analyze_alluvial.py  analyze_bimodality.py  analyze_cocitation.py  analyze_communities_clusters.py  analyze_embeddings.py  analyze_genealogy.py  analyze_multilingual.py  analyze_syllabi.py  analyze_teaching_canon.py  analyze_temporal.py  analyze_unfccc_topics.py  analyze_zscore_vs_pvalue.py  backfill_unstructured_refs.py  build_datapaper_archive.sh  build_econ_cf_panel.py  build_het_core.py  build_smoke_fixture.py  build_teaching_canon.py  build_teaching_yaml.py  calibrate_reranker.py  catalog_bibcnrs.py  catalog_grey.py  (+176 more)
tables/: bib_corpus_match.csv  language_by_year.csv  tab1_terms.csv  tab2_alluvial.csv  tab2_breakpoint_robustness.csv  tab2_breakpoint_robustness_censor1.csv  tab2_breakpoints.csv  tab2_breakpoints_censor1.csv  tab2_breakpoints_censor2.csv  tab2_k_sensitivity.csv  tab2_lexical_tfidf.csv  tab2b_breakpoint_robustness_core.csv  tab2b_breakpoint_robustness_core_censor1.csv  tab2b_breakpoints_core.csv  tab3_lineages.csv  tab3_louvain_sensitivity.csv  tab4_pca_components.csv  tab5_axis_detection.csv  tab5_bimodality.csv  tab5_pole_papers.csv  tab5b_pole_papers_core.csv  tab_core_institution_by_type.csv  tab_core_institutions.csv  tab_core_venues_journals.csv  tab_core_venues_series.csv  tab_core_venues_top10.md  teaching_canon.csv
tests/: conftest.py  makefile_helper.py  test_agents_md.py  test_alluvial_outputs.py  test_alluvial_unit.py  test_analysis_config.py  test_analytical_null.py  test_analyze_multilingual.py  (+120 more)
(+502 files in other folders)
