[project]
name = "climate-finance-het"
version = "0.1.0"
description = "Literature corpus and bibliometric analysis for Œconomia climate finance article"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "matplotlib",
    "seaborn",
    "scikit-learn",
    "plotly",
    "networkx",
    "requests",
    "pyyaml",
    "langdetect>=1.0.9",
    "pdfplumber",
    "pytest",
    "requests-mock",
]

[dependency-groups]
# Phase 1 corpus building: DVC + heavy ML/NLP deps.
# Install with: uv sync --group corpus
# Phase 2/3 users (figures, manuscript) do NOT need this group.
corpus = [
    "dvc>=3.67.0",
    "dvc-ssh>=4.2.2",
    "torch",
    "sentence-transformers",
    "umap-learn",
    "hdbscan",
    "python-louvain",
    "beautifulsoup4",
    "pdfplumber",
    "ddgs",
    "bibtexparser",
    "rapidfuzz",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }
