[project]
name = "climate-finance-het"
version = "0.1.0"
description = "Literature corpus and bibliometric analysis for Œconomia climate finance article"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "matplotlib",
    "seaborn",
    "scikit-learn",
    "plotly",
    "networkx",
    "requests",
    "pyyaml",
    "langdetect>=1.0.9",
    "pdfplumber",
    "pytest",
    "pytest-timeout",
    "requests-mock",
    "python-dotenv>=1.2.2",
    "litellm>=1.30.0",
    "rich>=13.0",
]

[project.optional-dependencies]
# Torch accelerator extras — mutually exclusive. Always specify one with --group corpus,
# otherwise sentence-transformers pulls a generic torch from PyPI (~2.5 GB, uncontrolled).
# doudou (no GPU):  uv sync --group corpus --extra cpu
# padme (A4000):    uv sync --group corpus --extra cu130
cpu = ["torch>=2.10.0"]
cu130 = ["torch>=2.10.0"]

[dependency-groups]
# Phase 1 corpus building: DVC + heavy ML/NLP deps.
# Install with: uv sync --group corpus --extra cpu   (or --extra cu130 on GPU machines)
# Phase 2/3 users (figures, manuscript) do NOT need this group.
corpus = [
    "dvc>=3.67.0",
    "dvc-ssh>=4.2.2",
    "sentence-transformers",
    "umap-learn",
    "hdbscan",
    "python-louvain",
    "beautifulsoup4",
    "pdfplumber",
    "ddgs",
    "bibtexparser",
    "rapidfuzz",
]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests that require network access or external data (deselect with '-m \"not slow\"')",
]

[tool.uv]
conflicts = [
    [{ extra = "cpu" }, { extra = "cu130" }],
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu130", extra = "cu130" },
]
