[project]
name = "climate-finance-het"
version = "0.1.0"
description = "Literature corpus and bibliometric analysis for Œconomia climate finance article"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "matplotlib",
    "seaborn",
    "scikit-learn",
    "plotly",
    "networkx",
    "requests",
    "pyyaml",
    "langdetect>=1.0.9",
    "pdfplumber",
    "pytest",
    "pytest-timeout",
    "requests-mock",
    "python-dotenv>=1.2.2",
    "litellm>=1.30.0,<=1.82.6",
    "rich>=13.0",
]

[project.optional-dependencies]
# Torch accelerator extras — mutually exclusive. Always specify one with --group corpus,
# otherwise sentence-transformers pulls a generic torch from PyPI (~2.5 GB, uncontrolled).
# doudou (no GPU):  uv sync --group corpus --extra cpu
# padme (A4000):    uv sync --group corpus --extra cu130
cpu = ["torch>=2.10.0"]
cu130 = ["torch>=2.10.0"]

[dependency-groups]
# Phase 1 corpus building: DVC + heavy ML/NLP deps.
# Install with: uv sync --group corpus --extra cpu   (or --extra cu130 on GPU machines)
# Phase 2/3 users (figures, manuscript) do NOT need this group.
corpus = [
    "dvc>=3.67.0",
    "dvc-ssh>=4.2.2",
    "sentence-transformers",
    "umap-learn",
    "hdbscan",
    "python-louvain",
    "beautifulsoup4",
    "pdfplumber",
    "ddgs",
    "bibtexparser",
    "rapidfuzz",
]
dev = [
    "fpdf2>=2.8.7",
]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests that require network access or external data (deselect with '-m \"not slow\"')",
    "integration: marks tests that spawn subprocesses or use sleep-based timing (deselect with '-m \"not integration\"')",
]

[tool.uv]
conflicts = [
    [{ extra = "cpu" }, { extra = "cu130" }],
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu130", extra = "cu130" },
]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = [
    "C901",    # McCabe complexity
    "PLR0912", # too many branches
    "PLR0915", # too many statements
    "UP006",   # use builtin types (list[] not List[])
    "UP007",   # use X | Y not Union[X, Y]
    "UP035",   # deprecated typing imports
]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.pylint]
max-branches = 15
max-statements = 80
